--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,9 @@
 <% provide(title: "Home") %>
-
+<div id="welcome">
 <h1>Welcome to my site</h1>
-<div>
+</div>
+<div id="summary">
+    <%= image_tag("https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/078/1e4/37c5196.jpg", {id: "profile_pic", alt: "My profile picture"}) %>
     <p>
         Hello and welcome to my website. This site contains a little information 
         about me. If you are a potential employer that has stumbled upon my site 
