--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
 </head>
 <body>
 <%= render 'layouts/header' %>
+<% flash.each do |type, message| %>
+    <div class="alert flash <%= type %>">
+      <%= message %>
+    </div>
+  <%end%>
 <%= yield %>
 <%= render 'layouts/footer' %>
 </body>
