added css for portfolio

--- a/app/views/static_pages/portfolio.html.erb
+++ b/app/views/static_pages/portfolio.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, "Portfolio") %>
+
 <h1>Portfolio</h1>
 <p>Here are some examples of my work, at least what I can show. These are mostly school projects 
 or stuff I've played with at home.</p>
@@ -13,35 +15,35 @@ or stuff I've played with at home.</p>
             <% end %>
         </tr>
         <% Portfolio.all.each do |p| %>
-            <tr>
+            <tr class="form_row">
                 <% if p.id == params[:id].to_i %>
                     <%= form_tag portfolios_edit_path do %>
-                        <td><%= text_field_tag('project',p.project) %></td>
-                        <td><%= text_area_tag('description',p.description) %></td>
-                        <td><%= text_area_tag('links', p.links) %></td>
-                        <td><%= submit_tag("Save Edits") %></td>
+                        <td class="form_cell" ><%= text_field_tag('project',p.project,class: 'portfolio_text') %></td>
+                        <td class="form_cell" ><%= text_area_tag('description',p.description, class: 'portfolio_area') %></td>
+                        <td class="form_cell" ><%= text_area_tag('link', p.link, class: 'portfolio_area') %></td>
+                        <td class="form_cell" ><%= submit_tag("Save Edits", class: 'portfolio_button') %></td>
                     <% end %>
                 <% else %>
                     <td><%= p.project %></td>
                     <td><%= p.description %></td>
-                    <% link = p.links.split('|') %>
+                    <% link = p.link.split('|') %>
                     <td><%= link_to(link[0], link[1], {target:"blank"})%></td>
                     <% if current_user && current_user.admin %>
-                        <td><%= link_to("Delete",portfolios_destroy_path(:id => p.id), {:class => "button"}) %> | <%= link_to("Edit", portfolios_path(:id => p.id)) %></td>
+                        <td class="form_cell" ><%= link_to("Delete",portfolios_destroy_path(:id => p.id),{class: 'portfolio_button'}) %> | <%= link_to("Edit", portfolios_path(:id => p.id),{class: 'portfolio_button'}) %></td>
                     <% end %>
                 <% end %>
             </tr>
         <% end %>
         
-        <% if current_user && current_user.admin && params[:id].nil?%>
+        <% if current_user && current_user.admin && params[:id].nil? %>
             <% @portfolio = Portfolio.new %>
             <%= form_for @portfolio do |f| %>
-               
+            
                 <tr>
-                    <td><%= f.text_field :project %></td>
-                    <td><%= f.text_area :description %></td>
-                    <td><%= f.text_area :links %></td>
-                    <td><%= f.submit "Add" %></td>
+                    <td class="form_cell" ><%= f.text_field :project, class: 'portfolio_text' %></td>
+                    <td class="form_cell" ><%= f.text_area :description, class: 'portfolio_area' %></td>
+                    <td class="form_cell" ><%= f.text_area :link, class: 'portfolio_area' %></td>
+                    <td class="form_cell" ><%= f.submit "Add", class: 'portfolio_button' %></td>
                 </tr>
                 
             <% end %>
